# Tron-Shell

./: .gitignore  Final Setup Instructions.md  LICENSE  README.md  license.md  pyproject.toml  requirements.txt  setup.py
config/: default_rules.yaml
examples/: README.md
tests/: __init__.py  test_bootloader.py  test_flasher.py  test_usb_detector.py
tron_core/: bootloader_manager.py  debug_logger.py  platform_atmega.py  usb_detector.py
tron_shell/: __init__.py  bootloader.py  cli.py  flasher.py  usb_detector.py
