[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tron-shell"
version = "1.0.0"
description = "A next-generation command-line interface for flashing firmware to microcontrollers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tron Shell Contributors"}
]
keywords = ["microcontroller", "firmware", "flash", "embedded", "arduino", "stm32", "esp32"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
]

dependencies = [
    "pyserial>=3.5",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyusb>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
tron = "tron_shell.cli:main"

[project.urls]
Homepage = "https://github.com/rootcastleco/Tron-Shell"
Repository = "https://github.com/rootcastleco/Tron-Shell"
Issues = "https://github.com/rootcastleco/Tron-Shell/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tron_shell*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=tron_shell --cov-report=term-missing"
